2010-11-23 Roman
- DAQ.BFN: Translation to Russian and Ukrainian is added. Version 0.5.0 is released.
- SYS: TSYS::time2str() function based on POSIX strftime() is added.
- FIX:Transport.Sockets, Transport.SSL: Input buffer clear before send request is added to output transport.
    Use for prevent data getting from previous broken request on too latent connections.
- UI.VCAEngine: Context help is added for attributes of primitive "Media".


2010-11-22 Roman
- FIX:DOC: openscada.pdf, DAQ.ModBus::about.pdf, UI.VCAEngine::about.pdf, UI.WebUser::about.pdf:
    The documents is fixed for some content and translation bugs.
- SYS.ModSched: Errors into shared libraries processing is fixed.
- UI.VCAEngine: Context help is added for attributes of primitives: "FormEl" and "Text".


2010-11-19 Roman
- DB.MySQL: Timeouts set support is added.
- DAQ.BFN: Code symbols support is added.


2010-11-17 Roman
- !!:DAQ: BFN module is added.
- FIX:SYS: Function cron() is fixed to hours processing.
- FIX:DAQ.DiamondBoards: Limits to channel's number is set.
- Protocol:HTTP: Text content for POST request is added of output protocols.
- UI.QTCfg, UI.QTStarter, UI.Vision: The signal QAction::activated() is replaced by QAction::triggered().


2010-11-16 Roman
- UI.VCAEngine: Syntax highlight is added for attributes "doc" and "style" of primitive "Document".
    Inner code highlight for attributes "tmpl" and "doc" is made adaptive for value from <body docProcLang="CodeLang"/>, value get by PCRECPP.


2010-11-13 Roman
- DAQ.ModBus: Parameters reenable at controller start is added for data blocks changings apply. Mostly for removed attributes apply.


2010-11-11 Roman
- UI.VCAEngine: Context help and syntax highlighting is added for main attributes of a widget.


2010-11-09 Maxim
- UI.VCAEngine: Tooltip for the elements' list of the primitive ElFigure is added.


2010-11-08 Roman