@@ -1,3 +1,8 @@
+2010-11-25 Roman
+- UI.VCAEngine: Context help is added for attributes of primitives: "Diageam", "Protocol" and "Document".
+- UI.Vision: Full text attributes edition of a widget into separated window with big place is added.
+
+
 2010-11-23 Roman
 - DAQ.BFN: Translation to Russian and Ukrainian is added. Version 0.5.0 is released.
 - SYS: TSYS::time2str() function based on POSIX strftime() is added.
